#2 Fix header issue on mobile screens
2.1em still too large for mobile screens to display on one line

--- a/Freelancing.css
+++ b/Freelancing.css
@@ -21,7 +21,7 @@ header {
 header h1 {
     margin:1.5rem auto 0 auto;
     color: white;
-    font-size: 2.1em;
+    font-size: 1.9em;
 }
 
 header img {
